// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content components should render Content successfully 1`] = `
<View
  style={
    Array [
      Object {
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "paddingBottom": 0,
        "paddingLeft": "5%",
        "paddingRight": "5%",
        "paddingTop": 0,
      },
    ]
  }
/>
`;

exports[`Content components should render KeyboardAvoider successfully 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      },
    ]
  }
/>
`;

exports[`Content components should render SafeArea successfully 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Array [
      Object {
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      },
    ]
  }
/>
`;

exports[`Content components should render ScrollableContent successfully 1`] = `
<RCTScrollView
  style={
    Array [
      Object {
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "paddingBottom": 0,
        "paddingLeft": "5%",
        "paddingRight": "5%",
        "paddingTop": 0,
      },
    ]
  }
>
  <View />
</RCTScrollView>
`;
